# LetsChat

./: CMakeLists.txt  README.md
src/cpp/: main.cpp
src/qml/: Main.qml
src/qml/components/: CircularImage.qml  IconLabel.qml  LeftMenuBar.qml  MenuButtonIcon.qml  MenuButtonImage.qml
src/qml/theme/: Constants.qml  Theme.qml  qmldir
